--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,7 +4,8 @@ default:
   tags: ['docker']
 
 stages:
-  - build
+  - pre
+
 
 before_script:
   # Fix that damn Git Unsafe Repository (cve-2022-24765)
@@ -14,7 +15,8 @@ before_script:
   # Fetch all branches from repository
   - git fetch --all
 
-build-job:
-  stage: build
+
+pre-rule1:
+  stage: pre
   script:
-    - echo "Hello World !"
+    - bash /.gitlab/test_ignore.sh
