--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,7 +27,10 @@ pre-rule2:
   script:
     - chmod +x .gitlab/check_ci.sh
     - cd .gitlab
-    - ./check_ci.sh rebase
+    - ./check_ci.sh $TEST
+  parallel:
+    matrix:
+      - TEST: [ignore, rebase, header]
 
 pre-rule3:
   stage: pre
